--- a/main/index.html
+++ b/main/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="main/css/reset.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="main/CSS/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 
     <link rel="stylesheet" href="">
     <title>Document</title>
@@ -14,7 +14,7 @@
 <body class="bg-dark">
         <header>
             <nav class="navbar fixed-top ">
-                <a href=""><img src="/main/SRC/craftmine.png" alt=""></a>
+                <a href=""><img src="SRC/craftmine.png" alt=""></a>
 
                 <div>
                     <select name="select" id="" class="select"> 
@@ -38,7 +38,7 @@
                             <div class="crafting-app_recipe">
                                 <div class="recipe">
                                     <div class="recipe_input">
-                                        <i>::before</i>
+                                        <i class="">::before</i>
                                         <i>::before</i>
                                         <i>::before</i>
                                         <i>::before</i>
