--- a/main/index.html
+++ b/main/index.html
@@ -51,12 +51,22 @@
                                     <div class="recipe_output">
                                         <i>::before</i>
                                         ::before
-                                        <!----->
+                                        <!---->
                                         ::after
                                     </div>
                                 </div>                                   
                             </div>
-                        </div>            
+                            <div class="crafting-app__ingredients">
+                                <b>Ингредиенты:</b>
+                                <ul>
+                                    <li>
+                                        <i>
+                                        </i>
+                                        "Ингредиенты"    
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>         
                     </div>
                     <div class="col border rounded p-4 m-4">
                         <div class="craffting-app_wrapper"> 
@@ -76,18 +86,28 @@
                                         <div class="recipe_output">
                                             <i>
                                                 ::before
-                                                <!----->
+                                                <!---->
                                                 ::after
                                             </i>
                                         </div>
                                     </div> 
                                 </div>
                             </div>
+                            <div class="crafting-app__ingredients">
+                                <b>Ингредиенты:</b>
+                                <ul>
+                                    <li>
+                                        <i>
+                                        </i>
+                                        "Ингредиенты"    
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
+                    </div> 
                 </div>
             </div>
-        </main>
+        </main> 
 
         <footer>
 
