--- a/main/index.html
+++ b/main/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script> 
 
     <link rel="stylesheet" href="">
     <title>Document</title>
@@ -34,8 +35,11 @@
 
     <main>
         <div class="container-fluid  d-flex h-100 justify-content-center align-items-center p-0">
+
             <div class="col-md-7 m-4 p-4 page bg-white">
+                
                 <div class="crafting_app">
+
                     <div class="craffting-app_wrapper">
                         <div class="crafting-app_recipe">
                             <div class="recipe">
@@ -69,6 +73,7 @@
                             </ul>
                         </div>
                     </div>
+
                     <div class="craffting-app_wrapper">
                         <div class="crafting-app_recipe">
                             <div class="crafting-app_recipe">
@@ -104,6 +109,9 @@
                             </ul>
                         </div>
                     </div>
+
+                    <script src="JS/Main.js"></script>
+
                     <div class="crafting-app__items vb vb-visible">
                         <div class="vb-content"
                             style="display: block; overflow: hidden scroll; height: 100%; width: 100% ;">
@@ -835,6 +843,7 @@
                                 class="crafting-app__item i1141"></i>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -845,7 +854,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>   
 </body>
 
 </html>
