--- a/main/index.html
+++ b/main/index.html
@@ -76,25 +76,23 @@
 
                     <div class="craffting-app_wrapper">
                         <div class="crafting-app_recipe">
-                            <div class="crafting-app_recipe">
-                                <div class="recipe recipe_smelting">
-                                    ::before
-                                    <div class="recipe_input">
-                                        <i class="">
-                                            ::before
-                                        </i>
-                                        <i class="">
-                                            ::before
-                                        </i>
+                            <div class="recipe recipe_smelting">
+                                ::before
+                                <div class="recipe_input">
+                                    <i class="">
+                                        ::before
+                                    </i>
+                                    <i class="">
+                                        ::before
+                                    </i>
+                                    ::after
+                                </div>
+                                <div class="recipe_output">
+                                    <i>
+                                        ::before
+                                        <!---->
                                         ::after
-                                    </div>
-                                    <div class="recipe_output">
-                                        <i>
-                                            ::before
-                                            <!---->
-                                            ::after
-                                        </i>
-                                    </div>
+                                    </i>
                                 </div>
                             </div>
                         </div>
@@ -110,7 +108,30 @@
                         </div>
                     </div>
 
-                    <script src="JS/Main.js"></script>
+                    <div class="craffting-app_wrapper">
+                        <div class="crafting-app_recipe">
+                            <div class="recipe recipe_smithing">
+                                ::before
+                                <div class="recipe_input">
+                                    <i class="">
+                                        ::before
+                                    </i>
+                                    <i class="">
+                                        ::before
+                                    </i>
+                                    ::after
+                                </div>
+                                <div class="recipe_output">
+                                    <i class="">
+                                        ::before
+                                    </i>
+                                    ::before
+                                    <!--  -->
+                                    ::after
+                                </div>                         
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="crafting-app__items vb vb-visible">
                         <div class="vb-content"
@@ -851,10 +872,7 @@
 
     <footer>
 
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-        crossorigin="anonymous"></script>   
+    </footer> 
 </body>
 
 </html>
