--- a/main/index.html
+++ b/main/index.html
@@ -43,7 +43,9 @@
                     <div class="craffting-app_wrapper">
                         <div class="crafting-app_recipe">
                             <div class="recipe">
+
                                 <div class="recipe_input">
+
                                     <i class="">::before</i>
                                     <i>::before</i>
                                     <i>::before</i>
@@ -54,6 +56,7 @@
                                     <i>::before</i>
                                     <i>::before</i>
                                 </div>
+
                                 <div class="recipe_output">
                                     <i>::before</i>
                                     ::before
@@ -62,6 +65,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="crafting-app__ingredients">
                             <b>Ингредиенты:</b>
                             <ul>
@@ -87,6 +91,7 @@
                                     </i>
                                     ::after
                                 </div>
+
                                 <div class="recipe_output">
                                     <i>
                                         ::before
@@ -96,6 +101,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="crafting-app__ingredients">
                             <b>Ингредиенты:</b>
                             <ul>
@@ -121,15 +127,27 @@
                                     </i>
                                     ::after
                                 </div>
+                                
                                 <div class="recipe_output">
                                     <i class="">
                                         ::before
                                     </i>
                                     ::before
-                                    <!--  -->
+                                    <!---->
                                     ::after
                                 </div>                         
                             </div>
+                        </div>
+
+                        <div class="crafting-app__ingredients">
+                            <b>Ингредиенты:</b>
+                            <ul>
+                                <li>
+                                    <i>
+                                    </i>
+                                    "Ингредиенты"
+                                </li>
+                            </ul>
                         </div>
                     </div>
 
