--- a/main/index.html
+++ b/main/index.html
@@ -40,7 +40,7 @@
 
                     <div class="craffting-app_wrapper">
                         <div class="crafting-app_recipe">
-                            <div class="recipe">
+                            <div class="recipe recipe_shaped">
 
                                 <div class="recipe_input">
 
