--- a/main/index.html
+++ b/main/index.html
@@ -53,7 +53,7 @@
 
             <div class="col-md-7 m-4 p-4 page bg-white">
                 
-                <div class="crafting_app">
+                <div class="crafting_app" id="crafting_app">
 
                     <div class="craffting-app_wrapper" id="recipe_shaped" style="display: block;">
 
@@ -964,7 +964,7 @@
 
     </footer> 
 
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
