--- a/main/index.html
+++ b/main/index.html
@@ -28,9 +28,9 @@
             <div class="">
 
                 <select name="" class="select" id="select">
-                    <option value="1">Vanila</option>
-                    <option value="2">Railcraft</option>
-                    <option value="3">Lord of the ring</option>
+                    <option value="VN">Vanila</option>
+                    <option value="RC">Railcraft</option>
+                    <option value="LotR">Lord of the ring</option>
                 </select>
 
                 <form class="">
@@ -945,6 +945,14 @@
                     </div>
 
                     <div class="crafting-app__items vb vb-visible" id="railcraft" style="display:none">
+
+                        <div class="vb-content" style="overflow: hidden scroll; height: 100%; width: 100% ;"> 
+
+                        </div>
+
+                    </div>
+
+                    <div class="crafting-app__items vb vb-visible" id="lotr" style="display:none">
 
                         <div class="vb-content" style="overflow: hidden scroll; height: 100%; width: 100% ;"> 
 
