--- a/main/index.html
+++ b/main/index.html
@@ -28,9 +28,9 @@
             <div class="">
 
                 <select name="" class="select" id="select">
-                    <option value="VN">Vanila</option>
-                    <option value="RC">Railcraft</option>
-                    <option value="LotR">Lord of the ring</option>
+                    <option value="1">Vanila</option>
+                    <option value="2">Railcraft</option>
+                    <option value="3">Lord of the ring</option>
                 </select>
 
                 <form class="">
