--- a/main/index.html
+++ b/main/index.html
@@ -948,12 +948,36 @@
                     <div class="crafting-app__items vb vb-visible" id="railcraft" style="display:none">
 
                         <div class="vb-content railcraft" style="overflow: hidden scroll; height: 100%; width: 100% ;">
-                            <i title="Фомка" class="crafting-app__item r1"></i><i title="Фомка"
-                                class="crafting-app__item r2"></i><i title="Фомка" class="crafting-app__item r3"></i><i
-                                title="Фомка" class="crafting-app__item r4"></i><i title="Фомка"
-                                class="crafting-app__item r5"></i><i title="Фомка" class="crafting-app__item r6"></i><i
-                                title="Фомка" class="crafting-app__item r7"></i><i title="Фомка"
-                                class="crafting-app__item r8"></i><i title="Фомка" class="crafting-app__item r9"></i>
+                            <i title="Монтировка" class="crafting-app__item r1"></i><i title="Армированная монтировка"
+                                class="crafting-app__item r2"></i><i title="Стальной топор"
+                                class="crafting-app__item r3"></i><i title="Стальная мотыга"
+                                class="crafting-app__item r4"></i><i title="Стальная кирка"
+                                class="crafting-app__item r5"></i><i title="Стальные Ножницы"
+                                class="crafting-app__item r6"></i><i title="Стальная лопата"
+                                class="crafting-app__item r7"></i><i title="Стальной меч"
+                                class="crafting-app__item r8"></i><i title="Стальной шлем"
+                                class="crafting-app__item r9"></i><i title="Стальная кираса"
+                                class="crafting-app__item r10"></i><i title="Стальные поножи"
+                                class="crafting-app__item r11"></i><i title="Стальные ботинки"
+                                class="crafting-app__item r12"></i><i title="Лупа" class="crafting-app__item r13"></i><i
+                                title="Очки путевого обходчика" class="crafting-app__item r14"></i><i
+                                title="Комбинезон инженера" class="crafting-app__item r15"></i><i
+                                title="Стандартный рельс" class="crafting-app__item r16"></i><i title="Улучшенный рельс"
+                                class="crafting-app__item r17"></i><i title="Деревянный рельс"
+                                class="crafting-app__item r18"></i><i title="Высокоскоростной рельс"
+                                class="crafting-app__item r19"></i><i title="Укреплённый рельс"
+                                class="crafting-app__item r20"></i><i title="" class="crafting-app__item r21"></i><i
+                                title="Деревянная шпала" class="crafting-app__item r22"></i><i title="Каменная шпала"
+                                class="crafting-app__item r23"></i><i title="Арматура"
+                                class="crafting-app__item r24"></i> <i title="Загрузчик предметов"
+                                class="crafting-app__item r25"></i><i title="Разгрузчик предметов"
+                                class="crafting-app__item r26"></i><i title="Продвинутый загрузчик предметов"
+                                class="crafting-app__item r27"></i><i title="Продвинутый разгрузчик предметов"
+                                class="crafting-app__item r28"></i><i title="Загрузчик жидкости" class="crafting-app__item r29"></i><i
+                                title="Разгрузчик жидкости" class="crafting-app__item r30"></i><i title=""
+                                class="crafting-app__item r31"></i><i title="" class="crafting-app__item r32"></i><i
+                                title="" class="crafting-app__item r33"></i>
+                            `
                         </div>
 
                     </div>
