--- a/main/index.html
+++ b/main/index.html
@@ -962,9 +962,9 @@
                                 class="crafting-app__item r12"></i><i title="Лупа" class="crafting-app__item r13"></i><i
                                 title="Очки путевого обходчика" class="crafting-app__item r14"></i><i
                                 title="Комбинезон инженера" class="crafting-app__item r15"></i><i
-                                title="Стандартный рельс" class="crafting-app__item r16"></i><i title="Улучшенный рельс"
-                                class="crafting-app__item r17"></i><i title="Деревянный рельс"
-                                class="crafting-app__item r18"></i><i title="Высокоскоростной рельс"
+                                title="Деревянный рельс" class="crafting-app__item r18"></i><i title="Стандартный рельс"
+                                class="crafting-app__item r16"></i><i title="Улучшенный рельс"
+                                class="crafting-app__item r17"></i><i title="Высокоскоростной рельс"
                                 class="crafting-app__item r19"></i><i title="Укреплённый рельс"
                                 class="crafting-app__item r20"></i><i title="" class="crafting-app__item r21"></i><i
                                 title="Деревянная шпала" class="crafting-app__item r22"></i><i title="Каменная шпала"
@@ -973,10 +973,11 @@
                                 class="crafting-app__item r25"></i><i title="Разгрузчик предметов"
                                 class="crafting-app__item r26"></i><i title="Продвинутый загрузчик предметов"
                                 class="crafting-app__item r27"></i><i title="Продвинутый разгрузчик предметов"
-                                class="crafting-app__item r28"></i><i title="Загрузчик жидкости" class="crafting-app__item r29"></i><i
-                                title="Разгрузчик жидкости" class="crafting-app__item r30"></i><i title=""
-                                class="crafting-app__item r31"></i><i title="" class="crafting-app__item r32"></i><i
-                                title="" class="crafting-app__item r33"></i>
+                                class="crafting-app__item r28"></i><i title="Загрузчик жидкости"
+                                class="crafting-app__item r29"></i><i title="Разгрузчик жидкости"
+                                class="crafting-app__item r30"></i><i title="" class="crafting-app__item r31"></i><i
+                                title="" class="crafting-app__item r32"></i><i title=""
+                                class="crafting-app__item r33"></i>
                             `
                         </div>
 
