--- a/main/index.html
+++ b/main/index.html
@@ -973,7 +973,7 @@
                                 class="crafting-app__item r29"></i><i title="Разгрузчик жидкости"
                                 class="crafting-app__item r30"></i><i title="" class="crafting-app__item r31"></i><i
                                 title="" class="crafting-app__item r32"></i><i title=""
-                                class="crafting-app__item r33"></i>
+                                class="crafting-app__item r33"></i><i title="" class="crafting-app__item r46"></i>
                             `
                         </div>
 
