--- a/main/index.html
+++ b/main/index.html
@@ -200,7 +200,7 @@
 
                     <div>
 
-                        <form style="display: block;">
+                        <form class="m-1" style="display: block;">
 
                             <input type="text" name=text" class="search shadow-sm" placeholder="Search here">
         
