--- a/main/index.html
+++ b/main/index.html
@@ -201,11 +201,9 @@
 
                     <div class="">
 
-                        <div class="form-outline mb-1"> 
+                        <div class="form-outline mb-1">
 
-                            <input type="search" id="form1" class="form-control" placeholder="Search" aria-label="Search" />   
-
-                        </div>
+                            <input type="search" id="datatable-search-input" class="form-control" placeholder="Search" id="datatable-search-input">                        </div>
 
                         <div class="crafting-app__items vb vb-visible" id="vanila" style="display:block">
 
