--- a/main/index.html
+++ b/main/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="css/item-v.css">
     <link rel="stylesheet" href="css/Item-r.css">
+    <script src="js/search.js"></script>
+
 
     <title>CraftMine</title>
 
@@ -201,9 +203,9 @@
 
                     <div class="" id="all-items">
 
-                        <form id="search-highlight" method="post" action="#" class="mb-2">
+                        <form id="search-highlight" class="mb-2">
 
-                            <input type="text" class="form-control" />
+                            <input type="search" class="form-control" id="input" placeholder="Search"/>
 
                         </form>
 
