--- a/main/index.html
+++ b/main/index.html
@@ -10,8 +10,6 @@
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="css/item-v.css">
     <link rel="stylesheet" href="css/Item-r.css">
-    <script src="js/search.js"></script>
-
 
     <title>CraftMine</title>
 
@@ -977,7 +975,6 @@
                                     class="crafting-app__item r30"></i><i title="" class="crafting-app__item r31"></i><i
                                     title="" class="crafting-app__item r32"></i><i title=""
                                     class="crafting-app__item r33"></i><i title="" class="crafting-app__item r62"></i>
-                                `
                             </div>
     
                         </div>
@@ -1004,7 +1001,9 @@
 
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/select.js"></script>
+    <script src="js/search.js"></script>
+    
 </script>
 
 </body>
