--- a/main/index.html
+++ b/main/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="css/item-v.css">
     <link rel="stylesheet" href="css/Item-r.css">
-
     <title>CraftMine</title>
 
 </head>
@@ -157,7 +156,7 @@
                     <div class="crafting-app__items vb vb-visible" id="vanila" style="display:block">
 
                         <div class="vb-content vanila" style="overflow: hidden scroll; height: 100%; width: 100% ;">
-                            
+                            <i class="crafting-app__item"></i>
                         </div>
 
                     </div>
@@ -165,7 +164,7 @@
                     <div class="crafting-app__items vb vb-visible" id="railcraft" style="display:none">
 
                         <div class="vb-content railcraft" style="overflow: hidden scroll; height: 100%; width: 100% ;">
-
+                            <i class="crafting-app__item"></i>
                         </div>
 
                     </div>
@@ -173,7 +172,7 @@
                     <div class="crafting-app__items vb vb-visible" id="lotr" style="display:none">
 
                         <div class="vb-content" style="overflow: hidden scroll; height: 100%; width: 100% ;">
-
+                            <i class="crafting-app__item"></i>
                         </div>
 
                     </div>
