--- a/main/index.html
+++ b/main/index.html
@@ -74,7 +74,7 @@
 
                                 <div class="recipe_input">
 
-                                    <i class="">
+                                    <i class="v720">
 
                                     </i>
 
@@ -98,7 +98,7 @@
 
                                 <div class="recipe_input">
 
-                                    <i class="">
+                                    <i class="v733">
 
                                     </i>
 
