--- a/main/index.html
+++ b/main/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="css/item-v.css">
     <link rel="stylesheet" href="css/Item-r.css">
+    <script src="js/vue.min.js"></script>
     <title>CraftMine</title>
-
 </head>
 
 <body class="bg-dark">
@@ -143,6 +143,8 @@
 
                 </div>
 
+                <script src="js/craft_db.js"></script>
+
                 <div class="" id="all-items">
 
                     <form id="search-highlight" class="mb-2">
@@ -175,13 +177,12 @@
 
     </main>
 
-    <footer class="fixed-bottom">
+    <footer class="footer">
 
     </footer>
 
     <script src="js/select.js"></script>
     <script src="js/search.js"></script>
-
 </body>
 
 </html>
