--- a/main/index.html
+++ b/main/index.html
@@ -38,9 +38,9 @@
 
         <div class="container-fluid  d-flex h-100 justify-content-center align-items-center p-0">
 
-            <div class="col-md-7 m-4 p-4 page bg-white">
+            <div class="col-md-7 m-4 p-4 page">
 
-                <div class="crafting_app" id="crafting_app">
+                <div class="crafting_app">
 
                     <div class="craffting-app_wrapper">
 
@@ -86,9 +86,7 @@
 
                                 <div class="recipe_output">
 
-                                    <i>
-
-                                    </i>
+                                    <i class=""></i>
 
                                 </div>
 
@@ -148,9 +146,7 @@
                 <div class="" id="all-items">
 
                     <form id="search-highlight" class="mb-2">
-
-                        <input type="search" class="form-control" id="input" placeholder="Search"/>
-
+                        <input type="search" class="search form-control" id="input" placeholder="Search"/>
                     </form>
 
                     <div class="crafting-app__items vb vb-visible" id="vanila" style="display:block">
