--- a/main/index.html
+++ b/main/index.html
@@ -17,33 +17,20 @@
 <body class="bg-dark">
 
     <header class="sticky-top">
-
         <nav class="p-2">
-
             <a href="/main" class="m-1"><img src="SRC/craftmine.png" alt=""></a>
-
                 <select name="" class="select float-right m-1" id="select">
-
                     <option value="1">Vanila</option>
-
                     <option value="2">Railcraft</option>
-
                 </select>
-
         </nav>
-
     </header>
 
     <main class="">
-
         <div class="container-fluid  d-flex h-100 justify-content-center align-items-center p-0">
-
             <div class="col-md-7 m-4 p-4 page">
-
                 <div class="crafting_app">
-
                     <div class="craffting-app_wrapper">
-
                         <div class="crafting-app_recipe">
 
                             <div class="recipe recipe_shaped">
@@ -64,7 +51,7 @@
 
                                 <div class="recipe_output">
 
-                                    <i></i>
+                                    <i class=""></i>
 
                                 </div>
 
@@ -108,9 +95,7 @@
 
                                 <div class="recipe_output">
 
-                                    <i class="">
-
-                                    </i>
+                                    <i class=""></i>
 
                                 </div>
 
@@ -138,7 +123,6 @@
 
                         </div>
                     </div>    
-
                 </div>
                 
                 <script src="js/craft_db.js"></script>
@@ -150,27 +134,20 @@
                     </form>
 
                     <div class="crafting-app__items vb vb-visible" id="vanila" style="display:block">
-
                         <div class="vb-content vanila" style="overflow: hidden scroll; height: 100%; width: 100% ;">
-                            <i class="crafting-app__item"></i>
+                            <i class="crafting-app__item v1"></i>
                         </div>
-
                     </div>
 
                     <div class="crafting-app__items vb vb-visible" id="railcraft" style="display:none">
-
                         <div class="vb-content railcraft" style="overflow: hidden scroll; height: 100%; width: 100% ;">
                             <i class="crafting-app__item"></i>
                         </div>
-
                     </div>
 
                 </div>
-
             </div>
-
         </div>
-
     </main>
 
     <footer class="footer">
