--- a/main/index.html
+++ b/main/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="src/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="src/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/styles.css">
@@ -16,14 +16,16 @@
 
 <body class="bg-dark">
 
-    <header class="sticky-top">
-        <nav class="p-2">
-            <a href="/main" class="m-1"><img src="SRC/craftmine.png" alt=""></a>
-                <select name="" class="select float-right m-1" id="select">
-                    <option value="1">Vanila</option>
-                    <option value="2">Railcraft</option>
-                </select>
-        </nav>
+    <header class="container-fluid  d-flex h-100 justify-content-center p-0">
+        <div class="col-md-7 header">
+            <nav class="p-2">
+                <a href="/main" class="m-1"><img src="SRC/craftmine.png" alt=""></a>
+                    <select name="" class="select float-right m-1" id="select">
+                        <option value="1">Vanila</option>
+                        <option value="2">Railcraft</option>
+                    </select>
+            </nav>
+        </div>
     </header>
 
     <main class="">
@@ -102,23 +104,13 @@
                             </div>
 
                             <div class="crafting-app__ingredients">
-
                                 <b>Ингредиенты:</b>
-
                                 <ul>
-
                                     <li>
-
-                                        <i>
-
-                                        </i>
-
+                                        <i class=""></i>
                                         "Ингредиенты"
-
                                     </li>
-
                                 </ul>
-                                
                             </div>    
 
                         </div>
@@ -133,16 +125,17 @@
                         <input type="search" class="search form-control" id="input" placeholder="Search"/>
                     </form>
 
-                    <div class="crafting-app__items vb vb-visible" id="vanila" style="display:block">
-                        <div class="vb-content vanila" style="overflow: hidden scroll; height: 100%; width: 100% ;">
-                            <i class="crafting-app__item v1"></i>
+                    <div class="crafting-app__items vb vb-visible" id="vanila" style="display:block; position: relative;">
+                        <div class="vb-content vanila" style="display: block; overflow: hidden scroll; height: 100%; width: calc(100% + 15px);">
+                            <i class="crafting-app__item"></i>                        
                         </div>
                     </div>
 
                     <div class="crafting-app__items vb vb-visible" id="railcraft" style="display:none">
-                        <div class="vb-content railcraft" style="overflow: hidden scroll; height: 100%; width: 100% ;">
+                        <div class="vb-content railcraft" style="height: 100%; width: 100% ;">
                             <i class="crafting-app__item"></i>
                         </div>
+
                     </div>
 
                 </div>
@@ -156,6 +149,7 @@
 
     <script src="js/select.js"></script>
     <script src="js/search.js"></script>
+
 </body>
 
 </html>
