--- a/main/index.html
+++ b/main/index.html
@@ -17,7 +17,7 @@
 <body class="bg-dark">
 
     <header class="container-fluid  d-flex h-100 justify-content-center p-0">
-        <div class="col-md-7 header">
+        <div class="header col-md-7">
             <nav class="p-2">
                 <a href="/main" class="m-1"><img src="SRC/craftmine.png" alt=""></a>
                     <select name="" class="select float-right m-1" id="select">
