--- a/main/index.html
+++ b/main/index.html
@@ -122,13 +122,13 @@
                         <input type="search" class="search form-control" id="input" placeholder="Search"/>
                     </form>
 
-                    <div class="crafting-app__items vb vb-visible" id="vanila">
-                        <div class="vanila scrollbar" id="vanilaChild" style="overflow: hidden scroll; height: 100%; width: calc(100% + 15px);">                     
+                    <div class="crafting-app__items  vb vb-visible" id="vanila" >
+                        <div class="vb-content vanila scrollbar" id="vanilaChild" style="overflow: hidden scroll; height: 100%; width: 100%">                     
                         </div>
                     </div>
 
-                    <div class="crafting-app__items vb vb-visible scrollbar" id="railcraft" style="display:none">
-                        <div class="vb-content railcraft" style="height: 100%; width: 100% ;">
+                    <div class="crafting-app__items vb vb-visible" id="railcraft" style="display:none">
+                        <div class="vb-content railcraft scrollbar" style="height: 100%; width: 100% ;">
                         </div>
                     </div>
 
