--- a/main/index.html
+++ b/main/index.html
@@ -30,7 +30,7 @@
 
     <main class="">
         <div class="container-fluid  d-flex h-100 justify-content-center align-items-center p-0">
-            <div class="col-md-7 m-4 p-4 page">
+            <div class="col-md-7 page">
                 <div class="crafting_app">
                     <div class="craffting-app_wrapper">
                         <div class="crafting-app_recipe">
