--- a/main/index.html
+++ b/main/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="stylesheet" href="css/item-v.css">
     <link rel="stylesheet" href="css/Item-r.css">
+    <link rel="stylesheet" href="css/item-v.css">
+
 
     <title>CraftMine</title>
 </head>
@@ -34,12 +35,9 @@
                 <div class="crafting_app">
                     <div class="craffting-app_wrapper">
                         <div class="crafting-app_recipe">
-
                             <div class="recipe recipe_shaped">
-
                                 <div class="recipe_input">
-
-                                    <i class=""></i>
+                                    <i class="v1"></i>
                                     <i></i>
                                     <i></i>
                                     <i></i>
@@ -48,80 +46,47 @@
                                     <i></i>
                                     <i></i>
                                     <i></i>
-
                                 </div>
-
                                 <div class="recipe_output">
-
                                     <i class=""></i>
-
                                 </div>
-
                             </div>
 
                             <div class="recipe recipe_smelting">
-
                                 <div class="recipe_input">
-
-                                    <i class="v720">
-
-                                    </i>
-
-                                    <i class="">
-
-                                    </i>
-
-                                </div>
-
-                                <div class="recipe_output">
-
+                                    <i class="v720"></i>
                                     <i class=""></i>
-
                                 </div>
-
+                                <div class="recipe_output">
+                                    <i class=""></i>
+                                </div>
                             </div>
-
                             <div class="recipe recipe_smithing">
-
                                 <div class="recipe_input">
-
-                                    <i class="v733">
-
-                                    </i>
-
-                                    <i class="">
-
-                                    </i>
-
-                                </div>
-
-                                <div class="recipe_output">
-
+                                    <i class="v733"></i>
                                     <i class=""></i>
-
                                 </div>
-
+                                <div class="recipe_output">
+                                    <i class=""></i>
+                                </div>
                             </div>    
-
                         </div>
                     </div>    
                 </div>
-                <div class="" id="all-items">
 
+                <div class="" id="all-items">
                     <form id="search-highlight" class="mb-2">
                         <input type="search" class="search form-control" id="input" placeholder="Search"/>
                     </form>
-
                     <div class="crafting-app__items  vb vb-visible" id="vanila" >
                         <div class="vb-content vanila scrollbar" id="vanilaChild" style="overflow: hidden scroll; height: 100%; width: 100%">                     
                         </div>
                     </div>
-
                     <div class="crafting-app__items vb vb-visible" id="railcraft" style="display:none">
                         <div class="vb-content railcraft scrollbar" style="height: 100%; width: 100% ;">
+                            <i class="crafting-app__item r1"></i>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
