--- a/main/index.html
+++ b/main/index.html
@@ -72,7 +72,7 @@
                     </div>    
                 </div>
 
-                <div class="" id="all-items">
+                <div class="col" id="all-items">
                     <form id="search-highlight" class="mb-2">
                         <input type="search" class="search form-control" id="input" placeholder="Search"/>
                     </form>
