--- a/main/index.html
+++ b/main/index.html
@@ -72,11 +72,11 @@
                     </div>    
                 </div>
 
-                <div class="col" id="all-items">
+                <div class="" id="all-items">
                     <form id="search-highlight" class="mb-2">
                         <input type="search" class="search form-control" id="input" placeholder="Search"/>
                     </form>
-                    <div class="crafting-app__items  vb vb-visible" id="vanila" >
+                    <div class="crafting-app__items  vb vb-visible " id="vanila" >
                         <div class="vb-content vanila scrollbar" id="vanilaChild" style="overflow: hidden scroll; height: 100%; width: 100%">                     
                         </div>
                     </div>
