--- a/main/index.html
+++ b/main/index.html
@@ -35,7 +35,7 @@
                     <div class="craffting-app_wrapper">
                         <div class="crafting-app_recipe">
                             <div class="mb-2">
-                                <i class="crafting-app__title">Крафт предмета:</i>
+                                <i class="crafting-app__title">Крафт предмета: </i>
                             </div>
                             <div class="recipe recipe_shaped">
                                 <div class="recipe_input">
@@ -78,8 +78,7 @@
                     </form>
                     <div class="" id="all-items">
                         <div class="crafting-app__items" id="vanila">
-                            <div class="vanila scrollbar" id="vanilaChild">
-                            </div>
+                            <div class="vanila scrollbar" id="vanilaChild"></div>
                         </div>  
                         <div class="crafting-app__items scrollbar" id="railcraft" style="display: none;">
                             <div class="railcraft scrollbar" id="railChild"></div>
