--- a/main/index.html
+++ b/main/index.html
@@ -35,7 +35,7 @@
                     <div class="craffting-app_wrapper">
                         <div class="crafting-app_recipe">
                             <div class="mb-2">
-                                <i class="crafting-app__title">Крафт предмета: </i>
+                                <i class="crafting-app__title">Крафт предмета: <span id="setItemTitle"></span></i>
                             </div>
                             <div class="recipe recipe_shaped">
                                 <div class="recipe_input">
