--- a/main/index.html
+++ b/main/index.html
@@ -20,7 +20,7 @@
         <header class="container-fluid d-flex h-100 justify-content-center p-0 mb-4">
             <div class="header">
                 <nav class="p-2">
-                    <a href="/main" class="float-left"><img src="SRC/craftmine.png" alt=""></a>
+                    <a href="/main" class="float-left pb-2"><img src="SRC/craftmine.png" alt=""></a>
                         <select name="" class="select float-right m-1" id="select">
                             <option value="1">Vanila</option>
                             <option value="2">Railcraft</option>
