--- a/main/index.html
+++ b/main/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="stylesheet" href="css/Item-r.css">
     <link rel="stylesheet" href="css/item-v.css">
+    <link rel="stylesheet" href="css/Item-r.css">
+
 
     <title>CraftMine</title>
 </head>
@@ -21,10 +22,10 @@
             <div class="header">
                 <nav class="p-2">
                     <a href="/main" class="float-left pb-2"><img src="SRC/craftmine.png" alt=""></a>
-                        <select name="" class="select float-right m-1" id="select">
-                            <option value="1">Vanila</option>
-                            <option value="2">Railcraft</option>
-                        </select>
+                    <select name="" id="select" class="select float-right">
+                        <option value="1">Vanila</option>
+                        <option value="2">Railcraft</option>
+                    </select>
                 </nav>
             </div>
         </header>
@@ -33,13 +34,11 @@
             <div class="container-fluid  h-100 justify-content-center align-items-center">
                 <div class="crafting_app">
                     <div class="craffting-app_wrapper">
-                        <div class="crafting-app_recipe">
-                            <div class="mb-2">
-                                <i class="crafting-app__title">Крафт предмета <span id="setItemTitle"></span></i>
-                            </div>
+                        <div id="crafting-app__title" class="mb-2"></div>
+                        <div class="crafting-app_recipe vanila d-flex justify-content-center">
                             <div class="recipe recipe_shaped">
                                 <div class="recipe_input">
-                                    <i class=""></i>
+                                    <i></i>
                                     <i></i>
                                     <i></i>
                                     <i></i>
@@ -53,7 +52,7 @@
                                     <i class=""></i>
                                 </div>
                             </div>
-                            <div class="recipe recipe_smelting">
+                            <div class="recipe recipe_smelting" style="display: none;">
                                 <div class="recipe_input">
                                     <i class="v720"></i>
                                     <i class=""></i>
@@ -61,8 +60,8 @@
                                 <div class="recipe_output">
                                     <i class=""></i>
                                 </div>
-                            </div>
-                            <div class="recipe recipe_smithing">
+                            </div>  
+                            <div class="recipe recipe_smithing" style="display: none;">
                                 <div class="recipe_input">
                                     <i class="v733"></i>
                                     <i class=""></i>
@@ -95,7 +94,7 @@
 
     <script src="js/select.js"></script>
     <script src="js/search.js"></script>
-    <script src="js/craft_db.js"></script>
+    <script src="js/craft_dbv.js"></script>
 </body>
 
 </html>
