--- a/main/index.html
+++ b/main/index.html
@@ -36,7 +36,7 @@
                     <div class="craffting-app_wrapper">
                         <div id="crafting-app__title" class="mb-2"></div>
                         <div class="crafting-app_recipe vanila d-flex justify-content-center">
-                            <div class="recipe recipe_shaped">
+                            <div class="recipe recipe_shaped" style="display: none;">
                                 <div class="recipe_input">
                                     <i></i>
                                     <i></i>
@@ -52,7 +52,7 @@
                                     <i class=""></i>
                                 </div>
                             </div>
-                            <div class="recipe recipe_smelting" style="display: none;">
+                            <div class="recipe recipe_smelting" id="smelting" style="display: none;">
                                 <div class="recipe_input">
                                     <i class="v720"></i>
                                     <i class=""></i>
