--- a/main/index.html
+++ b/main/index.html
@@ -33,9 +33,9 @@
         <main class="page">
             <div class="container-fluid  h-100 justify-content-center align-items-center">
                 <div class="crafting_app">
+                    <div id="crafting-app__title" class="mb-2"></div>
                     <div class="craffting-app_wrapper">
-                        <div id="crafting-app__title" class="mb-2"></div>
-                        <div class="crafting-app_recipe vanila d-flex justify-content-center">
+                        <div class="crafting-app__recipe vanila d-flex justify-content-center">
                             <div class="recipe recipe_shaped" style="display: none;">
                                 <div class="recipe_input">
                                     <i></i>
