--- a/main/index.html
+++ b/main/index.html
@@ -7,7 +7,8 @@
     <link rel="shortcut icon" href="src/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/crafting-app.css">
     <link rel="stylesheet" href="css/recipe.css">
     <link rel="stylesheet" href="css/item-v.css">
     <link rel="stylesheet" href="css/Item-r.css">
@@ -36,8 +37,8 @@
                 <div class="crafting_app">
                     <div id="crafting-app__title" class="mb-2"></div>
                     <div class="craffting-app_wrapper">
-                        <div class="crafting-app__recipe vanila d-flex justify-content-center">
-                            <div class="recipe recipe_shaped">
+                        <div class="crafting-app__recipe vanila d-flex  justify-content-center">
+                            <div class="recipe recipe_shaped" >
                                 <div class="recipe_input">
                                     <i></i>
                                     <i></i>
@@ -53,7 +54,7 @@
                                     <i class=""></i>
                                 </div>
                             </div>
-                            <div class="recipe recipe_smelting">
+                            <div class="recipe recipe_smelting" >
                                 <div class="recipe_input">
                                     <i class="v720"></i>
                                     <i class=""></i>
