--- a/main/index.html
+++ b/main/index.html
@@ -34,11 +34,11 @@
     
         <main class="page">
             <div class="container-fluid  h-100 justify-content-center align-items-center">
-                <div class="crafting_app">
+                <div class="crafting_app" id="crafting-app">
                     <div id="crafting-app__title" class="mb-2"></div>
                     <div class="craffting-app_wrapper">
                         <div class="crafting-app__recipe vanila d-flex  justify-content-center">
-                            <div class="recipe recipe_shaped" >
+                            <div class="recipe shaped" >
                                 <div class="recipe_input">
                                     <i></i>
                                     <i></i>
@@ -54,7 +54,7 @@
                                     <i class=""></i>
                                 </div>
                             </div>
-                            <div class="recipe recipe_smelting" >
+                            <div class="recipe smelting" >
                                 <div class="recipe_input">
                                     <i class="v720"></i>
                                     <i class=""></i>
@@ -63,7 +63,7 @@
                                     <i class=""></i>
                                 </div>
                             </div>  
-                            <div class="recipe recipe_smithing">
+                            <div class="recipe smithing">
                                 <div class="recipe_input">
                                     <i class="v733"></i>
                                     <i class=""></i>
