--- a/main/index.html
+++ b/main/index.html
@@ -12,7 +12,16 @@
     <link rel="stylesheet" href="css/recipe.css">
     <link rel="stylesheet" href="css/item-v.css">
     <link rel="stylesheet" href="css/Item-r.css">
+    
+    <style>
+            .hide{
+        display: none;
+    }
 
+    .is_active{
+        display: flex;
+    }
+    </style>
 
     <title>CraftMine</title>
 </head>
