--- a/main/index.html
+++ b/main/index.html
@@ -8,20 +8,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/crafting-app.css">
-    <link rel="stylesheet" href="css/recipe.css">
     <link rel="stylesheet" href="css/item-v.css">
     <link rel="stylesheet" href="css/Item-r.css">
-    
-    <style>
-            .hide{
-        display: none;
-    }
-
-    .is_active{
-        display: flex;
-    }
-    </style>
 
     <title>CraftMine</title>
 </head>
@@ -43,7 +31,7 @@
     
         <main class="page">
             <div class="container-fluid  h-100 justify-content-center align-items-center">
-                <div class="crafting_app" id="crafting-app">
+                <div class="crafting_app">
                     <div id="crafting-app__title" class="mb-2"></div>
                     <div class="craffting-app_wrapper">
                         <div class="crafting-app__recipe vanila d-flex  justify-content-center">
@@ -63,7 +51,7 @@
                                     <i class=""></i>
                                 </div>
                             </div>
-                            <div class="recipe smelting" >
+                            <div class="recipe smelting " >
                                 <div class="recipe_input">
                                     <i class="v720"></i>
                                     <i class=""></i>
