--- a/main/index.html
+++ b/main/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/recipe.css">
+    <link rel="stylesheet" href="css/crafting-app.css">
     <link rel="stylesheet" href="css/item-v.css">
     <link rel="stylesheet" href="css/Item-r.css">
 
@@ -35,7 +37,16 @@
                     <div id="crafting-app__title" class="mb-2"></div>
                     <div class="craffting-app_wrapper">
                         <div class="crafting-app__recipe vanila d-flex  justify-content-center">
-                            <div class="recipe shaped" >
+
+                            <div class="recipe">
+                                <div class="recipe_input">
+
+                                </div>
+                                <div class="recipe_output">
+                                    <i></i>
+                                </div>
+                            </div>
+                            <!-- <div class="recipe recipe_shaped" >
                                 <div class="recipe_input">
                                     <i></i>
                                     <i></i>
@@ -51,7 +62,7 @@
                                     <i class=""></i>
                                 </div>
                             </div>
-                            <div class="recipe smelting " >
+                            <div class="recipe recipe_smelting " >
                                 <div class="recipe_input">
                                     <i class="v720"></i>
                                     <i class=""></i>
@@ -60,7 +71,7 @@
                                     <i class=""></i>
                                 </div>
                             </div>  
-                            <div class="recipe smithing">
+                            <div class="recipe recipe_smithing">
                                 <div class="recipe_input">
                                     <i class="v733"></i>
                                     <i class=""></i>
@@ -68,7 +79,7 @@
                                 <div class="recipe_output">
                                     <i class=""></i>
                                 </div>
-                            </div>    
+                            </div>     -->
                         </div>
                     </div>
                     <form id="search-highlight" class="mb-2">
