--- a/main/index.html
+++ b/main/index.html
@@ -53,7 +53,7 @@
                     <div id="craffting-app__categories"></div>
 
                     <div class="" id="all-items">
-                        <div class="crafting-app__items" id="vanila">
+                        <div class="crafting-app__items" id="vanila" style="display: block;">
                             <div class="vanila scrollbar" id="vanilaChild"></div>
                         </div>  
                         <div class="crafting-app__items scrollbar" id="railcraft" style="display: none;">
@@ -70,7 +70,7 @@
         </footer>
     </div>
 
-    <script src="js/select.js"></script>
+    <script type="module" src="js/select.js"></script>
     <script type="module" src="js/search.js"></script>
     <script type="module" src="js/categories.js"></script>
     <script type="module" src="js/craft_dbv.js"></script>
