--- a/main/index.html
+++ b/main/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name=viewport content="width=device-width, initial-scale=1.0 ">
     <link rel="shortcut icon" href="src/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -15,25 +16,23 @@
     <title>CraftMine</title>
 </head>
 
-<body class="bg-dark">
+<body class="bg-dark d-flex justify-content-center">
 
     <div class="container">
-        <header class="container-fluid d-flex h-100 justify-content-center p-0 mb-4">
-            <div class="header">
-                <nav class="p-2">
-                    <a href="/main" class="float-left pb-2"><img src="SRC/craftmine.png" alt=""></a>
-                    <select name="" id="select" class="select float-right">
-                        <option value="1">Vanila</option>
-                        <option value="2">Railcraft</option>
-                    </select>
-                </nav>
+        <header class="d-flex justify-content-center mb-4">
+            <div class="header p-2">
+                <a href="/main" class="float-left pb-2"><img src="SRC/craftmine.png" alt=""></a>
+                <select name="" id="select" class="select float-right">
+                    <option value="1">Vanila</option>
+                    <option value="2">Railcraft</option>
+                </select>
             </div>
         </header>
     
-        <main class="page">
-            <div class="container-fluid  h-100 justify-content-center align-items-center">
+        <main class="page p-3">
+            <div class="justify-content-center align-items-center">
                 <div class="crafting_app">
-                    <div id="crafting-app__title" class="mb-2"></div>
+                    <div id="crafting-app__title"></div>
                     <div class="craffting-app_wrapper">
                         <div class="crafting-app__recipe d-flex  justify-content-center vanila">
                             <div class="recipe">
