--- a/main/index.html
+++ b/main/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name=viewport content="width=device-width, initial-scale=1.0 ">
+    <meta name=viewport content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="src/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -46,7 +46,7 @@
                     </div>
 
                     <form id="search-highlight" class="mb-1">
-                        <input type="search" class="search form-control" id="input" placeholder="Search"/>
+                        <input type="search" class="search form-control" id="input" placeholder="Поиск"/>
                     </form>
 
                     <div id="craffting-app__categories"></div>
